--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Homework</h1>
+      <h1>Push-ups</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/165" rel="prev">
+        <a href="/comics/166" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/1">
+        <a class="random-post" href="/comics/74">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -139,11 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic with 4 panels in a 2x2 grid. A child goes talk to their grandparent and says in school they are studying history of the Internet but doesn't understand why they went from web to web 2.0 to web 4. The grandparent replies: we don't talk about web3">
-        <img src="/comics/166/166-web3-0.webp" alt="" width="350" />
-        <img src="/comics/166/166-web3-1.webp" alt="" width="350" />
-        <img src="/comics/166/166-web3-2.webp" alt="" width="350" />
-        <img src="/comics/166/166-web3-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. There are two characters, one of them has the tshirt off and shows a lot of muscles. The other one asks 'Wow, Dave! How did you get like that? You are a web developer!' Dave replies: 'every time I add a Tailwind class... I do one push-up'. In the last panel he adds 'I started with the tutorial yesterday, and have not finished my first page yet... please help...'">
+        <img src="/comics/167/167-push-ups-0.webp" alt="" width="350" />
+        <img src="/comics/167/167-push-ups-1.webp" alt="" width="350" />
+        <img src="/comics/167/167-push-ups-2.webp" alt="" width="350" />
+        <img src="/comics/167/167-push-ups-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/165" rel="prev">
+        <a href="/comics/166" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/125">
+        <a class="random-post" href="/comics/118">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -181,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/166">https://comicss.art/comics/166</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/166/web3.png">https://comicss.art/comics/166/web3.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/166/web3.html" rel="alternate">https://comicss.art/comics/166/web3.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/167">https://comicss.art/comics/167</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/167/push-ups.png">https://comicss.art/comics/167/push-ups.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/167/push-ups.html" rel="alternate">https://comicss.art/comics/167/push-ups.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -222,7 +222,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-11-08"></script>
+    <script src="/js/data.js?last-updated=2024-11-16"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
