--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Push-ups</h1>
+      <h1>Seasons Inputs</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/166" rel="prev">
+        <a href="/comics/167" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. There are two characters, one of them has the tshirt off and shows a lot of muscles. The other one asks 'Wow, Dave! How did you get like that? You are a web developer!' Dave replies: 'every time I add a Tailwind class... I do one push-up'. In the last panel he adds 'I started with the tutorial yesterday, and have not finished my first page yet... please help...'">
-        <img src="/comics/167/167-push-ups-0.webp" alt="" width="350" />
-        <img src="/comics/167/167-push-ups-1.webp" alt="" width="350" />
-        <img src="/comics/167/167-push-ups-2.webp" alt="" width="350" />
-        <img src="/comics/167/167-push-ups-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="different 'creative' password inputs: a regular password field shows dots instead of letters, summer password has suns instead, winter password has snowflakes, spring password has flowers, christmas password has santas, june corporate passwords has dots but they are the colors of the pride flag">
+        <img src="/comics/168/168-seasons-inputs-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/166" rel="prev">
+        <a href="/comics/167" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/118">
+        <a class="random-post" href="/comics/144">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/167">https://comicss.art/comics/167</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/167/push-ups.png">https://comicss.art/comics/167/push-ups.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/167/push-ups.html" rel="alternate">https://comicss.art/comics/167/push-ups.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/168">https://comicss.art/comics/168</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/168/seasons-inputs.png">https://comicss.art/comics/168/seasons-inputs.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/168/seasons-inputs.html" rel="alternate">https://comicss.art/comics/168/seasons-inputs.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
