New cartoon: if you give a mouse a cookie

--- a/comics/169/index.html
+++ b/comics/169/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #168: Seasons Inputs</title>
+    <title>comiCSS #169: If you give a mouse a cookie</title>
 
-    <meta property="og:title" content="comiCSS #168: Seasons Inputs" />
+    <meta property="og:title" content="comiCSS #169: If you give a mouse a cookie" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/168" />
-    <meta property="og:image" content="https://comicss.art/comics/168/thumb.png" />
-    <meta property="og:description" content="different 'creative' password inputs: a regular password field shows dots instead of letters, summer password has suns instead, winter password has snowflakes, spring password has flowers, christmas password has santas, june corporate passwords has dots but they are the colors of the pride flag" />
+    <meta property="og:url" content="https://comicss.art/comics/169" />
+    <meta property="og:image" content="https://comicss.art/comics/169/thumb.png" />
+    <meta property="og:description" content="Cartoon with two panels showing a mouse with a cookie. In the first panel, the mouse is smiling and looking happy, and has the text 'if you give a mouse a cookie...'. The second panel shows an angry mouse along with the text (partially covered by the mouse): ...he is going to ask what the **** is this? No HTTPS? No domain or expiration date? Have you not heard about GDPR? Who did even let you close to this code? This sucks! And you call yourself a developer? Can I talk to your manager? Do they know what a ****** developer you are? Aren't you ashame? You should be ashamed! ...An that's why you never give a mouse a ****ing cookie. The end." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/168">
-    <meta name="twitter:title" content="comiCSS #168: Seasons Inputs">
-    <meta name="twitter:description" content="different 'creative' password inputs: a regular password field shows dots instead of letters, summer password has suns instead, winter password has snowflakes, spring password has flowers, christmas password has santas, june corporate passwords has dots but they are the colors of the pride flag">
-    <meta name="twitter:image" content="https://comicss.art/comics/168/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/169">
+    <meta name="twitter:title" content="comiCSS #169: If you give a mouse a cookie">
+    <meta name="twitter:description" content="Cartoon with two panels showing a mouse with a cookie. In the first panel, the mouse is smiling and looking happy, and has the text 'if you give a mouse a cookie...'. The second panel shows an angry mouse along with the text (partially covered by the mouse): ...he is going to ask what the **** is this? No HTTPS? No domain or expiration date? Have you not heard about GDPR? Who did even let you close to this code? This sucks! And you call yourself a developer? Can I talk to your manager? Do they know what a ****** developer you are? Aren't you ashame? You should be ashamed! ...An that's why you never give a mouse a ****ing cookie. The end.">
+    <meta name="twitter:image" content="https://comicss.art/comics/169/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/168" />
+    <link rel="canonical" href="https://comicss.art/comics/169" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Seasons Inputs</h1>
+      <h1>If you give a mouse a cookie</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/167" rel="prev">
+        <a href="/comics/168" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/74">
+        <a class="random-post" href="/comics/167">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/169" rel="next">
+        <a href="/comics/170" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="different 'creative' password inputs: a regular password field shows dots instead of letters, summer password has suns instead, winter password has snowflakes, spring password has flowers, christmas password has santas, june corporate passwords has dots but they are the colors of the pride flag">
-        <img src="/comics/168/168-seasons-inputs-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="Cartoon with two panels showing a mouse with a cookie. In the first panel, the mouse is smiling and looking happy, and has the text 'if you give a mouse a cookie...'. The second panel shows an angry mouse along with the text (partially covered by the mouse): ...he is going to ask what the **** is this? No HTTPS? No domain or expiration date? Have you not heard about GDPR? Who did even let you close to this code? This sucks! And you call yourself a developer? Can I talk to your manager? Do they know what a ****** developer you are? Aren't you ashame? You should be ashamed! ...An that's why you never give a mouse a ****ing cookie. The end.">
+        <img src="/comics/169/169-mouse-cookie-0.webp" alt="" width="350" />
+        <img src="/comics/169/169-mouse-cookie-1.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/167" rel="prev">
+        <a href="/comics/168" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/144">
+        <a class="random-post" href="/comics/153">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/169" rel="next">
+        <a href="/comics/170" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/168">https://comicss.art/comics/168</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/168/seasons-inputs.png">https://comicss.art/comics/168/seasons-inputs.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/168/seasons-inputs.html" rel="alternate">https://comicss.art/comics/168/seasons-inputs.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/169">https://comicss.art/comics/169</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/169/mouse-cookie.png">https://comicss.art/comics/169/mouse-cookie.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/169/mouse-cookie.html" rel="alternate">https://comicss.art/comics/169/mouse-cookie.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +219,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 168;</script>
+    <script>let postId = 169;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
