--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>If you give a mouse a cookie</h1>
+      <h1>Argument</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,47 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/168" rel="prev">
-          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
-            <path d="M75,0 25,50 75,100" />
-          </svg>
-          <span>Previous</span>
-        </a>
-        <a class="random-post" href="/comics/167">
-          <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
-            <path class="random" d="M100,25 80,2 80,48Z" />
-            <path class="random" d="M100,75 80,98 80,52Z" />
-            <path d="M0,25 20,25 65,75 90,75 M0,75 20,75 65,25 95,25" />
-          </svg>
-          <span>Random</span>
-        </a>
-        <a href="#" rel="next">
-          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
-            <path d="M25,0 75,50 25,100" />
-          </svg>
-          <span>Next</span>
-        </a>
-        <a href="/" rel="last">
-          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
-            <path d="M90,0 90,100 M0,0 50,50 0,100" />
-          </svg>
-          <span>Last</span>
-        </a>
-      </nav>
-
-      <div id="comic-strip" class="" role="img" aria-label="Cartoon with two panels showing a mouse with a cookie. In the first panel, the mouse is smiling and looking happy, and has the text 'if you give a mouse a cookie...'. The second panel shows an angry mouse along with the text (partially covered by the mouse): ...he is going to ask what the **** is this? No HTTPS? No domain or expiration date? Have you not heard about GDPR? Who did even let you close to this code? This sucks! And you call yourself a developer? Can I talk to your manager? Do they know what a ****** developer you are? Aren't you ashame? You should be ashamed! ...An that's why you never give a mouse a ****ing cookie. The end.">
-        <img src="/comics/169/169-mouse-cookie-0.webp" alt="" width="350" />
-        <img src="/comics/169/169-mouse-cookie-1.webp" alt="" width="350" />
-      </div>
-
-      <nav aria-label="Comic strip browsing">
-        <a href="/comics/1" rel="first">
-          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
-            <path d="M10,0 10,100 M100,0 50,50 100,100" />
-          </svg>
-          <span>First</span>
-        </a>
-        <a href="/comics/168" rel="prev">
+        <a href="/comics/169" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -179,9 +139,51 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/169">https://comicss.art/comics/169</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/169/mouse-cookie.png">https://comicss.art/comics/169/mouse-cookie.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/169/mouse-cookie.html" rel="alternate">https://comicss.art/comics/169/mouse-cookie.html</a></p>
+      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. All of them have 3 people, two of them are talking about how CSS or Tailwind is better than the other, while the third person is more and more interested in the conversation. In the last panel, the two people agree that everything is ok as long as they are using what's best for each other, and the third person is disappointed because they didn't fight 'That is not how it is supposed to go!!'">
+        <img src="/comics/170/170-argument-0.webp" alt="" width="350" />
+        <img src="/comics/170/170-argument-1.webp" alt="" width="350" />
+        <img src="/comics/170/170-argument-2.webp" alt="" width="350" />
+        <img src="/comics/170/170-argument-3.webp" alt="" width="350" />
+      </div>
+
+      <nav aria-label="Comic strip browsing">
+        <a href="/comics/1" rel="first">
+          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
+            <path d="M10,0 10,100 M100,0 50,50 100,100" />
+          </svg>
+          <span>First</span>
+        </a>
+        <a href="/comics/169" rel="prev">
+          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
+            <path d="M75,0 25,50 75,100" />
+          </svg>
+          <span>Previous</span>
+        </a>
+        <a class="random-post" href="/comics/141">
+          <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
+            <path class="random" d="M100,25 80,2 80,48Z" />
+            <path class="random" d="M100,75 80,98 80,52Z" />
+            <path d="M0,25 20,25 65,75 90,75 M0,75 20,75 65,25 95,25" />
+          </svg>
+          <span>Random</span>
+        </a>
+        <a href="#" rel="next">
+          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
+            <path d="M25,0 75,50 25,100" />
+          </svg>
+          <span>Next</span>
+        </a>
+        <a href="/" rel="last">
+          <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
+            <path d="M90,0 90,100 M0,0 50,50 0,100" />
+          </svg>
+          <span>Last</span>
+        </a>
+      </nav>
+
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/170">https://comicss.art/comics/170</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/170/argument.png">https://comicss.art/comics/170/argument.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/170/argument.html" rel="alternate">https://comicss.art/comics/170/argument.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +222,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-12-16"></script>
+    <script src="/js/data.js?last-updated=2024-12-25"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
