--- a/comics/170/argument.html
+++ b/comics/170/argument.html
@@ -894,6 +894,7 @@ section:nth-child(2) {
     </style>
   </head>
   <body>
+    <!-- Inspired by John Kovalic's Dork Tower: http://www.dorktower.com/2020/01/14/this-is-the-way-dork-tower-14-01-20/ -->
     <article role="img" aria-label="comic with 4 panels in a 2x2 grid. All of them have 3 people, two of them are talking about how CSS or Tailwind is better than the other, while the third person is more and more interested in the conversation. In the last panel, the two people agree that everything is ok as long as they are using what's best for each other, and the third person is disappointed because they didn't fight 'That is not how it is supposed to go!!'">
       <section>
         <div class="bubble right"></div>
