New cartoon: primes

--- a/comics/175/index.html
+++ b/comics/175/index.html
@@ -9,25 +9,25 @@
   <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
   <meta name="theme-color" content="#993399" />
 
-  <title>comiCSS #174: AI Act</title>
+  <title>comiCSS #175: Primes</title>
 
-  <meta property="og:title" content="comiCSS #174: AI Act" />
+  <meta property="og:title" content="comiCSS #175: Primes" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://comicss.art/comics/174" />
-  <meta property="og:image" content="https://comicss.art/comics/174/thumb.png" />
+  <meta property="og:url" content="https://comicss.art/comics/175" />
+  <meta property="og:image" content="https://comicss.art/comics/175/thumb.png" />
   <meta property="og:description"
-    content="cartoon showing two characters. One is complaining that the AI Act is terrible and slows down progress in the EU. Then a panel describes an apocalyptic situation after AI replaces humans beings. The complaining character asks for potential solutions and ignores the other character when they continuosly reply 'AI Act'. In the last panel, a terminator has killed both characters." />
+    content="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://comicss.art/comics/174">
-  <meta name="twitter:title" content="comiCSS #174: AI Act">
+  <meta name="twitter:url" content="https://comicss.art/comics/175">
+  <meta name="twitter:title" content="comiCSS #175: Primes">
   <meta name="twitter:description"
-    content="cartoon showing two characters. One is complaining that the AI Act is terrible and slows down progress in the EU. Then a panel describes an apocalyptic situation after AI replaces humans beings. The complaining character asks for potential solutions and ignores the other character when they continuosly reply 'AI Act'. In the last panel, a terminator has killed both characters.">
-  <meta name="twitter:image" content="https://comicss.art/comics/174/thumb.png">
+    content="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)">
+  <meta name="twitter:image" content="https://comicss.art/comics/175/thumb.png">
   <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
   <link rel="shortcut icon" href="/favicon.png" />
 
-  <link rel="canonical" href="https://comicss.art/comics/174" />
+  <link rel="canonical" href="https://comicss.art/comics/175" />
 
   <link rel="stylesheet" href="/css/almond.lite.min.css" />
   <link rel="stylesheet" href="/css/styles.css" />
@@ -98,13 +98,13 @@
       </ul>
     </nav>
   </header>
-  <main id="main">
+  <main id="main" class="latest">
     <noscript>
       This website needs JavaScript to navigate. But, you can see all the drawings linked at once
       (without needing any JavaScript) in the <a href="/archive">Archive</a>.
     </noscript>
 
-    <h1>AI Act</h1>
+    <h1>Primes</h1>
 
     <nav aria-label="Comic strip browsing">
       <a href="/comics/1" rel="first">
@@ -113,13 +113,13 @@
         </svg>
         <span>First</span>
       </a>
-      <a href="/comics/173" rel="prev">
+      <a href="/comics/174" rel="prev">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M75,0 25,50 75,100" />
         </svg>
         <span>Previous</span>
       </a>
-      <a class="random-post" href="/comics/150">
+      <a class="random-post" href="/comics/148">
         <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
           <path class="random" d="M100,25 80,2 80,48Z" />
           <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
         </svg>
         <span>Random</span>
       </a>
-      <a href="/comics/175" rel="next">
+      <a href="/comics/176" rel="next">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M25,0 75,50 25,100" />
         </svg>
@@ -141,14 +141,9 @@
       </a>
     </nav>
 
-    <div id="comic-strip" role="img" class=""
-      aria-label="cartoon showing two characters. One is complaining that the AI Act is terrible and slows down progress in the EU. Then a panel describes an apocalyptic situation after AI replaces humans beings. The complaining character asks for potential solutions and ignores the other character when they continuosly reply 'AI Act'. In the last panel, a terminator has killed both characters.">
-      <img src="/comics/174/174-ai-act-0.webp" alt="" width="350" />
-      <img src="/comics/174/174-ai-act-1.webp" alt="" width="350" />
-      <img src="/comics/174/174-ai-act-2.webp" alt="" width="350" />
-      <img src="/comics/174/174-ai-act-3.webp" alt="" width="350" />
-      <img src="/comics/174/174-ai-act-4.webp" alt="" width="350" />
-      <img src="/comics/174/174-ai-act-5.webp" alt="" width="350" />
+    <div id="comic-strip" role="img" class="vertical"
+      aria-label="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)">
+      <img src="/comics/175/175-primes-0.webp" alt="" width="350" />
     </div>
 
     <nav aria-label="Comic strip browsing">
@@ -158,13 +153,13 @@
         </svg>
         <span>First</span>
       </a>
-      <a href="/comics/173" rel="prev">
+      <a href="/comics/174" rel="prev">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M75,0 25,50 75,100" />
         </svg>
         <span>Previous</span>
       </a>
-      <a class="random-post" href="/comics/80">
+      <a class="random-post" href="/comics/165">
         <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
           <path class="random" d="M100,25 80,2 80,48Z" />
           <path class="random" d="M100,75 80,98 80,52Z" />
@@ -172,7 +167,7 @@
         </svg>
         <span>Random</span>
       </a>
-      <a href="/comics/175" rel="next">
+      <a href="/comics/176" rel="next">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M25,0 75,50 25,100" />
         </svg>
@@ -187,11 +182,11 @@
     </nav>
 
     <p>Permalink: <a aria-label="permanet link" id="permanent-link"
-        href="/comics/174">https://comicss.art/comics/174</a></p>
+        href="/comics/175">https://comicss.art/comics/175</a></p>
     <p>Image link: <a aria-label="image version" id="image-link"
-        href="/comics/174/ai-act.png">https://comicss.art/comics/174/ai-act.png</a></p>
-    <p>Source code: <a aria-label="html version" id="code-link" href="/comics/174/ai-act.html"
-        rel="alternate">https://comicss.art/comics/174/ai-act.html</a></p>
+        href="/comics/175/primes.png">https://comicss.art/comics/175/primes.png</a></p>
+    <p>Source code: <a aria-label="html version" id="code-link" href="/comics/175/primes.html"
+        rel="alternate">https://comicss.art/comics/175/primes.html</a></p>
 
     <hr />
     <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/"
@@ -244,7 +239,7 @@
     </nav>
   </footer>
 
-  <script>let postId = 174;</script>
+  <script>let postId = 175;</script>
   <script src="/js/data.js?"></script>
   <script src="/js/code.js"></script>
 </body>
