--- a/comics/106/index.html
+++ b/comics/106/index.html
@@ -9,16 +9,16 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #106: test-wrap</title>
+    <title>comiCSS #106: text-wrap</title>
 
-    <meta property="og:title" content="comiCSS #106: test-wrap" />
+    <meta property="og:title" content="comiCSS #106: text-wrap" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art/comics/106" />
     <meta property="og:image" content="https://comicss.art/comics/106/thumb.png" />
     <meta property="og:description" content="A comic about web development created in CSS." />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://comicss.art/comics/106">
-    <meta name="twitter:title" content="comiCSS #106: test-wrap">
+    <meta name="twitter:title" content="comiCSS #106: text-wrap">
     <meta name="twitter:description" content="A comic about web development created in CSS.">
     <meta name="twitter:image" content="https://comicss.art/comics/106/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>test-wrap</h1>
+      <h1>text-wrap</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
