--- a/comics/179/index.html
+++ b/comics/179/index.html
@@ -9,25 +9,25 @@
   <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
   <meta name="theme-color" content="#993399" />
 
-  <title>comiCSS #175: Primes</title>
+  <title>comiCSS #179: Standing Desk</title>
 
-  <meta property="og:title" content="comiCSS #175: Primes" />
+  <meta property="og:title" content="comiCSS #179: Standing Desk" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://comicss.art/comics/175" />
-  <meta property="og:image" content="https://comicss.art/comics/175/thumb.png" />
+  <meta property="og:url" content="https://comicss.art/comics/179" />
+  <meta property="og:image" content="https://comicss.art/comics/179/thumb.png" />
   <meta property="og:description"
-    content="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)" />
+    content="cartoon with several cartoons showing a character working at a work station with the desk down, then up, then down, then up, then down... and at the end of the day the character looks sad saying 'I was so busy going up and down that I forgot to work!'" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://comicss.art/comics/175">
-  <meta name="twitter:title" content="comiCSS #175: Primes">
+  <meta name="twitter:url" content="https://comicss.art/comics/179">
+  <meta name="twitter:title" content="comiCSS #179: Standing Desk">
   <meta name="twitter:description"
-    content="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)">
-  <meta name="twitter:image" content="https://comicss.art/comics/175/thumb.png">
+    content="cartoon with several cartoons showing a character working at a work station with the desk down, then up, then down, then up, then down... and at the end of the day the character looks sad saying 'I was so busy going up and down that I forgot to work!'">
+  <meta name="twitter:image" content="https://comicss.art/comics/179/thumb.png">
   <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
   <link rel="shortcut icon" href="/favicon.png" />
 
-  <link rel="canonical" href="https://comicss.art/comics/175" />
+  <link rel="canonical" href="https://comicss.art/comics/179" />
 
   <link rel="stylesheet" href="/css/almond.lite.min.css" />
   <link rel="stylesheet" href="/css/styles.css" />
@@ -98,13 +98,13 @@
       </ul>
     </nav>
   </header>
-  <main id="main">
+  <main id="main" class="latest">
     <noscript>
       This website needs JavaScript to navigate. But, you can see all the drawings linked at once
       (without needing any JavaScript) in the <a href="/archive">Archive</a>.
     </noscript>
 
-    <h1>Primes</h1>
+    <h1>Standing Desk</h1>
 
     <nav aria-label="Comic strip browsing">
       <a href="/comics/1" rel="first">
@@ -113,13 +113,13 @@
         </svg>
         <span>First</span>
       </a>
-      <a href="/comics/174" rel="prev">
+      <a href="/comics/178" rel="prev">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M75,0 25,50 75,100" />
         </svg>
         <span>Previous</span>
       </a>
-      <a class="random-post" href="/comics/148">
+      <a class="random-post" href="/comics/25">
         <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
           <path class="random" d="M100,25 80,2 80,48Z" />
           <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
         </svg>
         <span>Random</span>
       </a>
-      <a href="/comics/176" rel="next">
+      <a href="/comics/180" rel="next">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M25,0 75,50 25,100" />
         </svg>
@@ -142,8 +142,13 @@
     </nav>
 
     <div id="comic-strip" role="img" class="vertical"
-      aria-label="prime symbols: single prime, double prime, triple prime,  quadruple prime, and Optimus Prime (with a drawing of the transformer instead of any prime symbol)">
-      <img src="/comics/175/175-primes-0.webp" alt="" width="350" />
+      aria-label="cartoon with several cartoons showing a character working at a work station with the desk down, then up, then down, then up, then down... and at the end of the day the character looks sad saying 'I was so busy going up and down that I forgot to work!'">
+      <img src="/comics/179/179-standing-desk-0.webp" alt="" width="350" />
+      <img src="/comics/179/179-standing-desk-1.webp" alt="" width="350" />
+      <img src="/comics/179/179-standing-desk-2.webp" alt="" width="350" />
+      <img src="/comics/179/179-standing-desk-3.webp" alt="" width="350" />
+      <img src="/comics/179/179-standing-desk-4.webp" alt="" width="350" />
+      <img src="/comics/179/179-standing-desk-5.webp" alt="" width="350" />
     </div>
 
     <nav aria-label="Comic strip browsing">
@@ -153,13 +158,13 @@
         </svg>
         <span>First</span>
       </a>
-      <a href="/comics/174" rel="prev">
+      <a href="/comics/178" rel="prev">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M75,0 25,50 75,100" />
         </svg>
         <span>Previous</span>
       </a>
-      <a class="random-post" href="/comics/165">
+      <a class="random-post" href="/comics/149">
         <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
           <path class="random" d="M100,25 80,2 80,48Z" />
           <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +172,7 @@
         </svg>
         <span>Random</span>
       </a>
-      <a href="/comics/176" rel="next">
+      <a href="/comics/180" rel="next">
         <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
           <path d="M25,0 75,50 25,100" />
         </svg>
@@ -182,11 +187,11 @@
     </nav>
 
     <p>Permalink: <a aria-label="permanet link" id="permanent-link"
-        href="/comics/175">https://comicss.art/comics/175</a></p>
+        href="/comics/179">https://comicss.art/comics/179</a></p>
     <p>Image link: <a aria-label="image version" id="image-link"
-        href="/comics/175/primes.png">https://comicss.art/comics/175/primes.png</a></p>
-    <p>Source code: <a aria-label="html version" id="code-link" href="/comics/175/primes.html"
-        rel="alternate">https://comicss.art/comics/175/primes.html</a></p>
+        href="/comics/179/standing-desk.png">https://comicss.art/comics/179/standing-desk.png</a></p>
+    <p>Source code: <a aria-label="html version" id="code-link" href="/comics/179/standing-desk.html"
+        rel="alternate">https://comicss.art/comics/179/standing-desk.html</a></p>
 
     <hr />
     <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/"
@@ -239,7 +244,7 @@
     </nav>
   </footer>
 
-  <script>let postId = 175;</script>
+  <script>let postId = 179;</script>
   <script src="/js/data.js?"></script>
   <script src="/js/code.js"></script>
 </body>
