--- a/comics/177/index.html
+++ b/comics/177/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #177: Vibe Coding Keyboard</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #177: Vibe Coding Keyboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/177" />
+    <meta property="og:image" content="https://comicss.art/comics/177/thumb.png" />
+    <meta property="og:description" content="illustration of a keyboard with a single Tab key" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/177">
+    <meta name="twitter:title" content="comiCSS #177: Vibe Coding Keyboard">
+    <meta name="twitter:description" content="illustration of a keyboard with a single Tab key">
+    <meta name="twitter:image" content="https://comicss.art/comics/177/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/177" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Standing Desk</h1>
+      <h1>Vibe Coding Keyboard</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/178" rel="prev">
+        <a href="/comics/176" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/25">
+        <a class="random-post" href="/comics/66">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/178" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,13 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon with several cartoons showing a character working at a work station with the desk down, then up, then down, then up, then down... and at the end of the day the character looks sad saying 'I was so busy going up and down that I forgot to work!'">
-        <img src="/comics/179/179-standing-desk-0.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-1.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-2.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-3.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-4.webp" alt="" width="350" />
-        <img src="/comics/179/179-standing-desk-5.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="illustration of a keyboard with a single Tab key">
+        <img src="/comics/177/177-vibe-coding-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -155,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/178" rel="prev">
+        <a href="/comics/176" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/149">
+        <a class="random-post" href="/comics/155">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -169,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/178" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -183,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/179">https://comicss.art/comics/179</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/179/standing-desk.png">https://comicss.art/comics/179/standing-desk.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/179/standing-desk.html" rel="alternate">https://comicss.art/comics/179/standing-desk.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/177">https://comicss.art/comics/177</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/177/vibe-coding.png">https://comicss.art/comics/177/vibe-coding.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/177/vibe-coding.html" rel="alternate">https://comicss.art/comics/177/vibe-coding.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-04-08"></script>
+    <script>let postId = 177;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
